--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,4 +1,4 @@
-<!-- <div *ngIf="user.profile_image_url; else placeholder">
+<div *ngIf="user.profile_image_url; else placeholder">
   <img md-list-avatar src="{{user.profile_image_url}}" alt="{{user.name}}s profile image">
 </div>
 
@@ -8,4 +8,4 @@
 
 <h4 md-line>{{user.name}}</h4>
 <p md-line>{{user.screen_name}}</p>
-<md-divider></md-divider> -->
+<md-divider></md-divider>
