--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-header></app-header>
 <app-hero></app-hero>
-<app-users-list></app-users-list>
-<app-tweets-list></app-tweets-list>
+<div id="search-result">
+  <app-users-list></app-users-list>
+  <app-tweets-list></app-tweets-list>
+</div>
