Users list service and ngrx structure has been added (tests will faill)

--- a/src/app/components/users-list/users-list.component.html
+++ b/src/app/components/users-list/users-list.component.html
@@ -1,7 +1,7 @@
 <div class="user-list">
   <md-list>
     <h3 md-subheader>Twitter Users search result</h3>
-    <div *ngFor="let user of users">
+    <div *ngFor="let user of users$ | async">
       <app-user [user]=user></app-user>
     </div>
   </md-list>
