Search component style has been set.

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,8 +4,10 @@ header {
 
   .header-content {
     width: 80%;
+    height: 100%;
     margin: auto;
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 }
