Added uid to the app fllow, users list component dispatch the twets action.

--- a/src/app/components/users-list/users-list.component.html
+++ b/src/app/components/users-list/users-list.component.html
@@ -2,7 +2,7 @@
   <md-list>
     <h3 md-subheader>Twitter Users search result</h3>
     <div *ngFor="let user of users$ | async">
-      <app-user [user]=user></app-user>
+      <app-user [user]=user (click)=displayUserTweet(user.id)></app-user>
     </div>
   </md-list>
 </div>
