Added a divider to the search results

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -14,7 +14,7 @@
       <a>
         <p>{{user.screen_name}}</p>
       </a>
-      <md-divider></md-divider>
+      <div class="divider"></div>
     </md-list-item>
   </div>
 </div>
