--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -42,6 +42,7 @@
     .search-result {
       width: 100%;
       border: 1px solid rgba(0, 0, 0, 0.12);
+      border-bottom: none;
       position: absolute;
       top: 2.5em;
 
@@ -54,6 +55,9 @@
         &:hover {
           background-color: #b2c1be;
         }
+      }
+      .divider {
+        border-bottom: 1px solid rgba(0, 0, 0, 0.12);
       }
     }
   }
