Added location of the user.

--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -9,5 +9,5 @@
 
   <h4 md-line>{{user.name}}</h4>
   <p md-line>{{user.screen_name}}</p>
-  <md-divider></md-divider>
+  <p md-line>{{user.location}}</p>
 </md-list-item>
