User avatar is now bigger and the container is wider, increase font of users list title.

--- a/src/app/components/users-list/users-list.component.scss
+++ b/src/app/components/users-list/users-list.component.scss
@@ -1,7 +1,13 @@
-.user-list {
-  border-right: 1px solid;
+/deep/
+app-users-list {
+  width: 30%;
+  .user-list {
+    border-right: 1px solid;
 
-  h3 {
-    font-size: 18px;
+    .mat-list {
+      h3 {
+        font-size: 18px;
+      }
+    }
   }
 }
