--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,6 +1,6 @@
 <md-list-item>
   <div *ngIf="user.profile_image_url; else placeholder">
-    <img md-line md-list-icon src="{{user.profile_image_url}}" alt="{{user.name}}s profile image">
+    <img md-line md-list-avatar src="{{user.profile_image_url}}" alt="{{user.name}}s profile image">
   </div>
 
   <ng-template #placeholder>
