--- a/src/app/components/tweet/tweet.component.html
+++ b/src/app/components/tweet/tweet.component.html
@@ -8,7 +8,8 @@
       <md-icon>account_circle</md-icon>
     </ng-template>
   </div>
-  <md-card-title>{{tweet.user.name}} @{{tweet.user.screen_name}}</md-card-title>
+  <md-card-title>{{tweet.user.name}}</md-card-title>
+  <md-card-subtitle>@{{tweet.user.screen_name}}</md-card-subtitle>
 </md-card-header>
 <md-card-content>
   <p>{{tweet.text}}</p>
