--- a/src/app/components/users-list/users-list.component.scss
+++ b/src/app/components/users-list/users-list.component.scss
@@ -7,6 +7,8 @@ app-users-list {
     .mat-list {
       h3 {
         font-size: 18px;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 700;
       }
     }
   }
