--- a/src/app/components/tweets-list/tweets-list.component.html
+++ b/src/app/components/tweets-list/tweets-list.component.html
@@ -1,4 +1,5 @@
 <div class="user-tweets">
+  <h3 md-subheader>Tweets by user</h3>
   <md-card class="tweet-card" *ngFor="let tweet of tweets$ | async">
     <app-tweet [tweet]=tweet></app-tweet>
   </md-card>
